--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<p>BRIAN GARMS</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>
+            <body>
+            </body>
+        </title>
+    </head>
+</html>
