First Page with Video and One Button

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-            <body>
-            </body>
-        </title>
-    </head>
+    <head><iframe src="https://player.vimeo.com/video/232398770" width=1285" height="500" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          <link rel="stylesheet"  type="text/css" href="newstyle.css"></head>
+        <title>LSU/BYU Hype Page</title>
+        <div>
+            <a href="stats-link-goes-here"<span>Stats</span>
+            </div>    
+
 </html>
