First Page, 2nd Button

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
           <link rel="stylesheet"  type="text/css" href="newstyle.css"></head>
         <title>LSU/BYU Hype Page</title>
         <div>
-            <a href="stats-link-goes-here"<span>Stats</span>
-            </div>    
+            <button type="button"><a href="stats-link-goes-here"<span>Stats</span></a></button>
+            <button type="button"><a href="location-stuff-goes-here"<span>Location</span></a></button>
+            </div>   
 
 </html>
