added new buttons an offensive stats table

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
           <link rel="stylesheet"  type="text/css" href="newstyle.css"></head>
         <title>LSU/BYU Hype Page</title>
         <div>
-            <button type="button"><a href="stats-link-goes-here"<span>Stats</span></a></button>
+            <button type="button"><a href="C:\Users\BGarms\lc101\html-me-something\index.html"<span>Stats</span></a></button>
             <button type="button"><a href="location-stuff-goes-here"<span>Location</span></a></button>
+            <button type="button"><a href="lsu-stuff-goes-here"<span>LSU</span></a></button>
+            <button type="button"><a href="byu-stuff-goes-here"<span>BYU</span></a></button>
             </div>   
 
 </html>
