--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head><iframe src="https://player.vimeo.com/video/232398770" width=1285" height="500" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          <link rel="stylesheet"  type="text/css" href="newstyle.css"></head>
+          <link rel="stylesheet"  type="text/css" href="styles.css"></head>
         <title>2017 Advocare Texas Kickoff</title>
 
         <main>
             <article>
+              <header>
         <h3 id="story">The 2017 LSU College Football was kicking off in Houston at the Advocare Texas Kickoff</h3>
         <p id="story">The game against BYU had been schedule to start at 6:00pm on September 2, 2017, but a week earlier,
             Mother Nature would have other plans...
         </p>
+              </header>
             </article>
 
         <img class="center"src ="Images\GertLoop2.gif" width="420" height="320"/> 
